# adopt

./: app.py  forms.py  models.py  pyproject.toml
templates/: add_pet.html  home.html  pet_detail.html
